# OpenAI_Cpp

./: CMakeLists.txt  LICENSE  README.md
include/OpenAI_Cpp/: model_type.h  model_type_map.h  open_ai.h
include/OpenAI_Cpp/Error/: error.h  error_type.h
include/OpenAI_Cpp/Models/: model_type.h  model_type_map.h  models.h  permission.h
include/OpenAI_Cpp/Utility/: json_helper.h  json_schemas.h
src/: model_type_map.cpp  open_ai.cpp
src/Models/: model.cpp  model_type_map.cpp
src/Utility/: json_helper.cpp  json_schemas.cpp
test/: CMakeLists.txt  OpenAI_API_SK.txt  model_type_map_test.cpp  openai_test.cpp
test/Model/: model_type_map_test.cpp
test/Utility/: json_helper_test.cpp  json_schema_test.cpp
